--- a/pi-core/pi-admin/pi-admin-biz/src/main/resources/bootstrap.yaml
+++ b/pi-core/pi-admin/pi-admin-biz/src/main/resources/bootstrap.yaml
@@ -14,5 +14,7 @@ spring:
       config:
         file-extension: yaml
         extension-configs:
+          - data-id: pi-common.yaml
+            refresh: true
           - dataId: pi-mybatis.yaml
           - dataId: pi-redis.yaml
