--- a/pi-core/pi-auth/src/main/resources/bootstrap.yml
+++ b/pi-core/pi-auth/src/main/resources/bootstrap.yml
@@ -10,4 +10,6 @@ spring:
       config:
         file-extension: yaml
         extension-configs:
+          - data-id: pi-common.yaml
+            refresh: true
           - data-id: pi-redis.yaml
