--- a/pi-core/pi-gateway/src/main/resources/bootstrap.yml
+++ b/pi-core/pi-gateway/src/main/resources/bootstrap.yml
@@ -12,4 +12,6 @@ spring:
       config:
         file-extension: yaml
         extension-configs:
+          - data-id: pi-common.yaml
+              refresh: true
           - data-id: pi-redis.yaml
