--- a/pi-core/pi-admin/pi-admin-biz/pom.xml
+++ b/pi-core/pi-admin/pi-admin-biz/pom.xml
@@ -24,6 +24,16 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-security</artifactId>
+            <version>1.6.12</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mapstruct</groupId>
