--- a/pi-core/pi-gateway/pom.xml
+++ b/pi-core/pi-gateway/pom.xml
@@ -39,6 +39,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-webflux-ui</artifactId>
+            <version>1.6.12</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>me.cloud.pi</groupId>
             <artifactId>pi-common-redis</artifactId>
         </dependency>
