--- a/pi-core/pi-auth/pom.xml
+++ b/pi-core/pi-auth/pom.xml
@@ -38,6 +38,16 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.12</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springdoc</groupId>-->
+<!--            <artifactId>springdoc-openapi-security</artifactId>-->
+<!--            <version>1.6.12</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>me.cloud.pi</groupId>
