--- a/pi-core/pi-auth/src/main/resources/bootstrap.yml
+++ b/pi-core/pi-auth/src/main/resources/bootstrap.yml
@@ -13,3 +13,10 @@ spring:
           - data-id: pi-common.yaml
             refresh: true
           - data-id: pi-redis.yaml
+
+#springdoc:
+#  swagger-ui:
+#    persistAuthorization: true
+#    oauth:
+#      additionalQueryStringParams:
+#        no_response_data: true
