--- a/pi-core/pi-admin/pi-admin-biz/src/main/resources/bootstrap.yaml
+++ b/pi-core/pi-admin/pi-admin-biz/src/main/resources/bootstrap.yaml
@@ -18,3 +18,8 @@ spring:
             refresh: true
           - dataId: pi-mybatis.yaml
           - dataId: pi-redis.yaml
+#springdoc:
+#  swagger-ui:
+#    oauth:
+#      additionalQueryStringParams:
+#        no_response_data: true
