资源服务器 JWT Redis 认证；为频繁调用的接口添加缓存（获取菜单，获取用户信息）；更新 nacos 配置；

--- a/pi-core/pi-admin/pi-admin-biz/pom.xml
+++ b/pi-core/pi-admin/pi-admin-biz/pom.xml
@@ -44,6 +44,10 @@
         </dependency>
         <dependency>
             <groupId>me.cloud.pi</groupId>
+            <artifactId>pi-common-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>me.cloud.pi</groupId>
             <artifactId>pi-common-security</artifactId>
         </dependency>
     </dependencies>
