--- a/pi-common/pi-common-security/pom.xml
+++ b/pi-common/pi-common-security/pom.xml
@@ -24,6 +24,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-jose</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>me.cloud.pi</groupId>
+            <artifactId>pi-common-redis</artifactId>
+        </dependency>
         <dependency>
             <groupId>me.cloud.pi</groupId>
             <artifactId>pi-common-web</artifactId>
