--- a/pi-core/pi-admin/pi-admin-biz/pom.xml
+++ b/pi-core/pi-admin/pi-admin-biz/pom.xml
@@ -24,16 +24,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.12</version>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springdoc</groupId>-->
-<!--            <artifactId>springdoc-openapi-security</artifactId>-->
-<!--            <version>1.6.12</version>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -59,6 +49,10 @@
         <dependency>
             <groupId>me.cloud.pi</groupId>
             <artifactId>pi-common-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>me.cloud.pi</groupId>
+            <artifactId>pi-common-swagger</artifactId>
         </dependency>
     </dependencies>
 
