新增日志功能

--- a/pi-common/pi-common-mybatis/pom.xml
+++ b/pi-common/pi-common-mybatis/pom.xml
@@ -28,6 +28,11 @@
 
         <dependency>
             <groupId>me.cloud.pi</groupId>
+            <artifactId>pi-common-swagger</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.cloud.pi</groupId>
             <artifactId>pi-common-security</artifactId>
             <scope>provided</scope>
         </dependency>
