--- a/pi-common/pom.xml
+++ b/pi-common/pom.xml
@@ -19,5 +19,6 @@
         <module>pi-common-security</module>
         <module>pi-common-web</module>
         <module>pi-common-swagger</module>
+        <module>pi-common-logging</module>
     </modules>
 </project>
