--- a/pi-core/pi-admin/pi-admin-biz/pom.xml
+++ b/pi-core/pi-admin/pi-admin-biz/pom.xml
@@ -40,6 +40,10 @@
 
         <dependency>
             <groupId>me.cloud.pi</groupId>
+            <artifactId>pi-admin-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>me.cloud.pi</groupId>
             <artifactId>pi-common-mybatis</artifactId>
         </dependency>
         <dependency>
