--- a/pi-common/pi-common-feign/pom.xml
+++ b/pi-common/pi-common-feign/pom.xml
@@ -13,12 +13,18 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>me.cloud.pi</groupId>
+            <artifactId>pi-common-web</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
