--- a/pi-core/pi-admin/pi-admin-api/pom.xml
+++ b/pi-core/pi-admin/pi-admin-api/pom.xml
@@ -10,4 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pi-admin-api</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>me.cloud.pi</groupId>
+            <artifactId>pi-common-feign</artifactId>
+        </dependency>
+    </dependencies>
 </project>
