--- a/pi-core/pi-auth/pom.xml
+++ b/pi-core/pi-auth/pom.xml
@@ -41,6 +41,10 @@
 
         <dependency>
             <groupId>me.cloud.pi</groupId>
+            <artifactId>pi-common-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>me.cloud.pi</groupId>
             <artifactId>pi-common-redis</artifactId>
         </dependency>
         <dependency>
