--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<fastjson2.version>2.0.12</fastjson2.version>
 		<mapstruct.version>1.5.2.Final</mapstruct.version>
 		<springdoc.version>1.6.12</springdoc.version>
+		<spring-boot-admin.version>2.5.1</spring-boot-admin.version>
 
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 
@@ -108,6 +109,11 @@
 				<groupId>org.springdoc</groupId>
 				<artifactId>springdoc-openapi-ui</artifactId>
 				<version>${springdoc.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>de.codecentric</groupId>
+				<artifactId>spring-boot-admin-starter-server</artifactId>
+				<version>${spring-boot-admin.version}</version>
 			</dependency>
 
 			<dependency>
