新增部门管理；代码优化

--- a/pi-common/pom.xml
+++ b/pi-common/pom.xml
@@ -21,5 +21,6 @@
         <module>pi-common-swagger</module>
         <module>pi-common-logging</module>
         <module>pi-common-job</module>
+        <module>pi-common-file</module>
     </modules>
 </project>
